@@ -258,16 +258,6 @@ public abstract class FormattedSourceTab extends BaseSourceTab
 		String sqlStatement = getSqlStatement();
 		String[] bindValues = getBindValues();
 
-		if (s_log.isDebugEnabled())
-		{
-			s_log.debug("Running SQL for index source tab: " + sqlStatement);
-			s_log.debug("With the following bind variable values: ");
-			int parameterIndex = 1;
-			for (String bindValue : bindValues)
-			{
-				s_log.debug("[" + (parameterIndex++) + "] => '" + bindValue + "'");
-			}
-		}
 		PreparedStatement pstmt = conn.prepareStatement(sqlStatement);
 
 		int parameterIndex = 1;
