@@ -62,6 +62,9 @@ Improved parsing for SQL editor: Table names tended to be marked as error (red) 
 
 Bug fixes:
 
+#1306 Postgres Plugin: source code for views does not display
+  Thanks to Mikhail Kiselev for suggesting the new way to query the source code.
+
 SQL editor: When the "replace tabs by spaces" option was selected (see menu File --> New Session Properties --> tab Syntax)
   indenting multiple lines with tabs corrupted the lines.
 
